kubernetes/config-map-as-a-volume-type.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
  - name: busybox-container
    image: busybox
    volumeMounts:
      - name: config-dir
        mountPath: /etc/config
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 9090
  volumes:
    - name: config-dir
      configMap:
        name: bb-configmap

# a pod can actually use multiple volumes types simutaneously
# for instance: an application that needs a configuration file mounted though a configMap, needs a tls certificate mounted as 
# a secret, database storage etc
