kubernetes/load-balancer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 3000
      nodePort: 30010
