kubernetes/multi-domains-or-subdomains-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: analytics.myapp.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: analytics-service
            port: 
              number: 3000
  - host: shopping.myapp.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shopping-service
            port: 
              number: 3001
  - host: notifications.myapp.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: notifications-service
            port: 
              number: 3002
