kubernetes/multi-path-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.com
    http:
      paths:
      - pathType: Prefix
        path: /analytics
        backend:
          service:
            name: analytics-service
            port: 
              number: 3000
      - pathType: Prefix
        path: /shopping
        backend:
          service:
            name: shopping-service
            port: 
              number: 8080
      - pathType: Prefix
        path: /notifications
        backend:
          service:
            name: notifications-service
            port: 
              number: 9090
      - pathType: Prefix
        path: /gmail
        backend:
          service:
            name: gmail-service
            port: 
              number: 9094
      - pathType: Prefix
        path: /calendar
        backend:
          service:
            name: calendar-service
            port: 
              number: 9095
